fix failing test cases